css/style.css
/* Your custom styles */
.pl-4_1 {
    padding-left: 2.1rem !important;
}
.pl-4_5 {
    padding-left: 2.5rem !important;
}
.pb-1_2 {
    padding-bottom: 1px !important;
}
.pb-1_3 {
    padding-bottom: 8px !important;
}
.pt-2-5 {
    padding-top: 0.8rem !important;
}
.mb-4_5 {
    margin-bottom: 27px !important;
}
.mt-4_5 {
    margin-top: 2.1rem !important;
}
.ml-4_5 {
    margin-left: 40px !important;
}
.my-a {
    margin-top: 0 !important;
    margin-bottom: 1.2rem !important;
}
.my-s {
    margin-top: 0 !important;
    margin-bottom: 0.2rem !important;
}
.th-strong th {
    font-weight: 900 !important;
}
.modal-dialog{
    overflow-y: initial !important
}
.modal-body-overflow{
    max-height: calc(100vh - 235px);
    overflow-y: auto;
}
.modal-body-fade{
    max-height: calc(100vh - 120px) !important;
    overflow-y: auto;
}
.cascading-admin-card {
    margin-top: 1.25rem; }
.cascading-admin-card .admin-up {
    margin-left: 4%;
    margin-right: 4%;
    margin-top: -1.25rem; }
.cascading-admin-card .admin-up .fas,
.cascading-admin-card .admin-up .far,
.cascading-admin-card .admin-up .fab {
    padding: 1.7rem;
    font-size: 2rem;
    color: #fff;
    text-align: left;
    -webkit-border-radius: 3px;
    border-radius: 3px; }
.cascading-admin-card .admin-up .data {
    float: right;
    margin-top: 2rem;
    text-align: right; }
.cascading-admin-card .admin-up .data p {
    color: #999999;
    font-size: 12px; }

/* temp fix to alignment issue for select box labels  */
.select-wrapper+label{
    z-index: 0;
    top: 0;
    margin-left: 0px;
}
.select-wrapper+label.active{
    font-size: 0.8rem;
    top: 0.7rem;
}
.md-outline.select-wrapper+label {
    top: .5em !important;
    z-index: 2 !important;
}
.select-wrapper.md-form.md-outline input.select-dropdown {
    padding: 0rem .75rem;
}
.select-wrapper.md-form.md-outline+label {
    top: -1.7em!important;
    font-size: 13px;
}
.md-form.md-outline .form-control {
    margin-bottom: 0px;
}
.select-wrapper.md-form input.select-dropdown {
    margin-bottom: 0px;
}

ul.striped li {
    padding: 0.5rem;
    border-bottom: 1px solid rgba(0, 0, 0, 0.15); }
ul.striped li:last-child {
    border-bottom: 0; }

@-webkit-keyframes autofill {
    to {
        color: #666;
        background: transparent; } }

@keyframes autofill {
    to {
        color: #666;
        background: transparent; } }

input:-webkit-autofill {
    -webkit-animation-name: autofill;
    animation-name: autofill;
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both; }
.trigger {
    padding: 1px 10px;
    font-size: 12px;
    font-weight: 400;
    border-radius: 10px;
    background-color: #eee;
    color: #212121;
    display: inline-block;
    margin: 2px 5px;
}

.hoverable, .trigger {
    transition: box-shadow 0.55s;
    box-shadow: 0;
}

.hoverable:hover, .trigger:hover {
    transition: box-shadow 0.45s;
    box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.mz-iframe {
    width: 100%;
}
@media (max-width: 1025px) {
    .mz-iframe {
        height: 1150px;
    }}
@media (min-width: 400px) {
    .mz-iframe {
        height: 570px;
    }}
@media (min-width: 769px) {
    .mz-iframe {
        height: 760px;
    }}
@media (min-width: 1025px) {
    .mz-iframe {
        height: 900px;
    }}
@media (min-width: 1445px) {
    .mz-iframe {
        height: 1040px;
    }}

.text-cancelled {
    text-decoration: line-through;
    font-style: italic;
}

.dataTables_wrapper {
    font-size: 14px;
}
.table-tight {
    border-collapse: collapse;
    border-spacing: 1px;
}
.table-tight > thead > tr > th {
    font-size: 12px;
    font-weight: normal !important;
    text-align: center !important;
    padding-top: 0px !important;
    padding-bottom: 10px !important;
}
.table-tight > tbody > tr > td {
    font-size: 13px;
    padding: 4px 3px 2px 3px !important;
}
.table-semi-tight {
    border-collapse: collapse;
    border-spacing: 3px;
}
.table-semi-tight > thead > tr > th {
    text-align: center !important;
    padding-top: 0px !important;
    padding-bottom: 12px !important;
}
.table-semi-tight > tbody > tr > td {
    font-size: 14px;
    padding: 6px 6px 3px 6px !important;
}
.table2 > tbody > tr > td {
    padding-bottom: 16px !important;
}

.scrollbar-card-body {
    position: relative;
    overflow-y: scroll;
}

.square::-webkit-scrollbar-track {
    border-radius: 0 !important; }

.square::-webkit-scrollbar-thumb {
    border-radius: 0 !important; }

.thin::-webkit-scrollbar {
    width: 6px; }

.modal-blur {
    box-shadow: 0px 0px 20px 20px rgba(255,255,255,1);
    text-shadow: 0px 0px 10px rgba(51, 51, 51, 0.9);
    //transform: scale(0.9);
    opacity: 0.5;
}

.section-header-style {
    float: left!important;
    width: 20px;
    height: 40px;
}
.section-header-title {
    font-weight: 550!important;
    padding-left: 2.3rem !important;
    margin-top: 9px;
    margin-bottom: 0!important;
}
.form-control:disabled {
    background-color: #e4e7e8 !important;
    opacity: 1;
}

.chip.chip-sm {
    height: 24px;
    line-height: 24px;
    border-radius: 12px;
}
.chip.chip-sm img {
    height: 24px;
    width: 24px;
}
.chip.chip-tag {
    height: 18px;
    line-height: 18px;
    border-radius: 9px;
    font-size: 11px!important;
    font-weight: normal!important;
    padding-left: 8px!important;
    padding-right: 8px!important;
    margin: 0.1rem 0.06rem !important;
}
.form-check-label {
    font-size: 14px!important;
    padding-left: 26px!important;
}
.font-weight-500 {
     font-weight: 500 !important; }

